feat: topics/k1ch/admin-delete-personas-roles / Implement API
