# server/the-usher-openapi-spec.yaml
@@ -619,6 +619,30 @@ paths:
         500:
           $ref: '#/components/responses/InternalError'
 
+  /personas/{persona_key}/roles/{role_key}:
+    delete:
+      'x-swagger-router-controller': 'personas/roles'
+      operationId: deletePersonaRole
+      summary: Removes a role for subject persona
+      parameters:
+      - $ref: '#/components/parameters/personaKeyPathParam'
+      - $ref: '#/components/parameters/roleKeyPathParam'
+      tags:
+        - Admin APIs
+      security:
+        - bearerAdminAuth: []
+      responses:
+        204:
+          description: Empty response on success
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalError'
+
   /clients:
     post:
       'x-swagger-router-controller': 'clients/index'
